// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendTrialOrFeedbackForm Validation experience is required for ExtendTrialForm 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main extendTrial"
    >
      <div>
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-bottom-large"
        >
          common.extendTrial.heading
        </h1>
        <span
          class="Tag--main"
        >
          <span
            class="bp3-tag bp3-round tag"
          >
            <span
              class="bp3-text-overflow-ellipsis bp3-fill"
            >
              common.trialInProgress
            </span>
          </span>
        </span>
        <p
          class="StyledProps--font StyledProps--main description StyledProps--padding-top-small StyledProps--padding-bottom-large"
        >
          common.extendTrial.description
        </p>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-right-small"
          >
            common.extendTrial.expiryDate:
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
          >
            June 30 2021
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
        >
          <div
            class="bp3-form-group bp3-intent-danger experience"
            data-id="experience-0"
          >
            <label
              class="bp3-label"
              for="experience"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="extendTrialForm_experience"
              >
                common.extendTrial.feedback.ifUseful
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class=""
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="experience"
                      type="radio"
                      value="10"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.extendTrial.feedback.answers.useful
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="experience"
                      type="radio"
                      value="5"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.extendTrial.feedback.answers.needMore
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="experience"
                      type="radio"
                      value="0"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.extendTrial.feedback.answers.improve
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-helper-text"
              >
                <div
                  class="FormError--errorDiv"
                  data-name="experience"
                >
                  <span
                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                    data-icon="circle-cross"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 13 13"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="FormError--error"
                  >
                    validation.thisIsARequiredField
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group suggestion"
            data-id="suggestion-1"
          >
            <label
              class="bp3-label"
              for="suggestion"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="extendTrialForm_suggestion"
              >
                common.extendTrial.feedback.suggestion
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="suggestion"
              >
                random
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              submit
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="reset"
          >
            <span
              class="bp3-button-text"
            >
              common.extendTrial.doItLater
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ExtendTrialOrFeedbackForm Validation experience is required for FeedBackForm 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-bottom-large"
        >
          Continuous Delivery common.extendTrial.feedback.title
        </h1>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
        >
          <div
            class="bp3-form-group bp3-intent-danger experience"
            data-id="experience-0"
          >
            <label
              class="bp3-label"
              for="experience"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="feedbackForm_experience"
              >
                common.extendTrial.feedback.ifUseful
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class=""
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="experience"
                      type="radio"
                      value="10"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.extendTrial.feedback.answers.useful
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="experience"
                      type="radio"
                      value="5"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.extendTrial.feedback.answers.needMore
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="experience"
                      type="radio"
                      value="0"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.extendTrial.feedback.answers.improve
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-helper-text"
              >
                <div
                  class="FormError--errorDiv"
                  data-name="experience"
                >
                  <span
                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                    data-icon="circle-cross"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 13 13"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="FormError--error"
                  >
                    validation.thisIsARequiredField
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group suggestion"
            data-id="suggestion-1"
          >
            <label
              class="bp3-label"
              for="suggestion"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="feedbackForm_suggestion"
              >
                common.extendTrial.feedback.suggestion
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="suggestion"
              >
                random
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              submit
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="reset"
          >
            <span
              class="bp3-button-text"
            >
              common.extendTrial.doItLater
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
